# Ozvil

./: build-windows.bat  replit.md
attached_assets/: Pasted--Ozvil-Windows-Workload-Modes-Plan-Summary-Ozvil-is-a-W_1777806109164.txt
ozvil/: .gitignore  BUILD.md  CHANGELOG.md  SIGNING.md  index.html  package.json  vite.config.ts
ozvil/.github/workflows/: ci.yml  deploy-update-server.yml  release.yml
ozvil/scripts/: build-release.ps1  generate-keys.ps1  sign-release.ps1  verify-installer.ps1
ozvil/src/: App.tsx  main.tsx
ozvil/src-tauri/: Capabilities.toml  Cargo.toml  tauri.conf.json
ozvil/src-tauri/capabilities/: default.json
ozvil/src-tauri/nsis/: installer.nsi  license.rtf
ozvil/src-tauri/src/: lib.rs  main.rs  updater.rs
ozvil/src-tauri/src/cli/: mod.rs
ozvil/src-tauri/src/commands/: mod.rs
ozvil/src-tauri/src/core/: activity_logger.rs  mod.rs  monitoring_loop.rs  rules_engine.rs  session_manager.rs  snapshot_manager.rs
ozvil/src-tauri/src/db/: migrations.rs  mod.rs  models.rs
ozvil/src-tauri/src/profiles/: builtin.rs  mod.rs
ozvil/src-tauri/src/windows_adapter/: app_control_provider.rs  mod.rs  notification_provider.rs  performance_provider.rs  power_provider.rs  process_provider.rs  sleep_provider.rs
ozvil/src-tauri/wix/: main.wxs  safe_mode_shortcut.wxs  variables.wxi
ozvil/src/components/: Layout.tsx  PressureBar.tsx  StatusBadge.tsx  TopOffenderList.tsx
ozvil/src/hooks/: useAppContext.tsx
ozvil/src/pages/: ActivityLog.tsx  Dashboard.tsx  DryRunPreview.tsx  ProfileEditor.tsx  RestoreCenter.tsx  Settings.tsx
ozvil/tests/: restore_tests.rs  rules_engine_tests.rs  session_tests.rs
ozvil/update-server/: README.md  update.json.example
(+15 files in other folders)
