[package]
name = "ozvil"
version = "0.1.0"
description = "Ozvil — Windows workload modes for heavy apps"
authors = ["Ozvil"]
edition = "2021"

[[bin]]
name = "ozvil"
path = "src/main.rs"

[lib]
name = "ozvil_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
parking_lot = "0.12"
csv = "1"
semver = { version = "1", features = ["serde"] }
dirs = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Power",
    "Win32_System_SystemInformation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Performance",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
] }

[dev-dependencies]
tempfile = "3"
